# adventofcode-2024

./: Cargo.toml  README.md  leaderboard.sh  out  outthch  requirements.txt
.github/workflows/: CI.yaml  leaderboard.yml  lint.yaml  main.yaml  setup.yml
day-01/part-1/: ayc0.nim  ayc0.py  corendos.zig  enizor.rs  evqna.cpp  giltho.rs  th-ch.py  thomren.py  thuiop.zig  troisdiz.go  youyoun.py
day-01/part-2/: ayc0.nim  ayc0.py  corendos.zig  enizor.rs  evqna.cpp  giltho.rs  th-ch.py  thomren.py  thuiop.zig  troisdiz.go  youyoun.py
day-02/part-1/: ayc0.nim  ayc0.porffor.ts  ayc0.py  ayc0.ts  corendos.zig  enizor.rs  evqna.cpp  giltho.rs  th-ch.py  thomren.py  thuiop.zig  troisdiz.go  youyoun.py
day-02/part-2/: ayc0.nim  ayc0.py  ayc0.ts  corendos.zig  enizor.rs  evqna.cpp  giltho.rs  th-ch.py  thomren.py  thuiop.zig  troisdiz.go  youyoun.py
day-03/part-1/: ayc0.ts  corendos.zig  enizor.rs  evqna.cpp  giltho.rs  th-ch.py  thomren.py  thuiop.zig  troisdiz.go  youyoun.py
day-03/part-2/: ayc0.ts  corendos.zig  enizor.rs  evqna.cpp  giltho.rs  th-ch.py  thomren.py  thuiop.zig  troisdiz.go  youyoun.py
day-04/part-1/: ayc0.py  corendos.zig  enizor.rs  evqna.cpp  gonz.py  th-ch.py  thomren.py  thuiop.zig  troisdiz.go  youyoun.py
day-04/part-2/: ayc0.py  corendos.zig  enizor.rs  evqna.cpp  gonz.py  th-ch.py  thomren.py  thuiop.zig  troisdiz.go  youyoun.py
day-05/part-1/: ayc0.ts  corendos.zig  enizor.rs  evqna.cpp  th-ch.py  thomren.py  thuiop.zig  troisdiz.go  youyoun.py
day-05/part-2/: ayc0.ts  enizor.rs  evqna.cpp  th-ch.py  (+4 more)
tool/: AOC.py  create.py  run.py
(+197 files in other folders)
